# SerialPort_Transmit_Program-CMake-

./: CMakeLists.txt  README.md
MyLib/: CMakeLists.txt  serialport.cpp  serialport.h
src_code/: CMakeLists.txt  main.cpp
